--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,10 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/list_item_height"
     android:orientation="horizontal"
     android:minHeight="@dimen/list_item_height"
-    android:padding="16dp"
     android:background="@color/tanBackground">
     
     <ImageView
@@ -16,10 +15,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/list_item_height"
         android:orientation="vertical"
         android:padding="16dp"
-        android:background="@color/categoryNumbers"
+        android:id="@+id/text_container"
         android:paddingLeft="16dp">
     <TextView
         android:id="@+id/mainText"
